fix profile api user ctx
